# gitlab-ci-precommit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
gitlab_ci_fmt/: __main__.py  cli.py  exceptions.py  utils.py
gitlab_ci_lint/: __main__.py  cli.py  exceptions.py  utils.py
tests/: requirements.txt
tests/fmt/: conftest.py  test_cli.py  test_exceptions.py  test_fmt.py
tests/fmt/test_files/: formatted_sample.yml  invalid.yml  sample.yml
tests/lint/: conftest.py  test_cli.py  test_exceptions.py  test_lint.py
